fix: make app and enclave standalone projects

--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -24,3 +24,5 @@ edition = "2021"
 [dependencies]
 sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
 sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
+
+[workspace]
