--- a/enclave/Cargo.toml
+++ b/enclave/Cargo.toml
@@ -31,3 +31,5 @@ default = []
 [target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
 sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
 sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
+
+[workspace]
