--- a/enclave/Cargo.toml
+++ b/enclave/Cargo.toml
@@ -31,5 +31,6 @@ default = []
 [target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
 sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
 sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
+lsm-sgx = { path = "../lsm-sgx", default-features = false }
 
 [workspace]
