fix: integrate engine and storage into sgx

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ version = "1.0.0"
 edition = "2021"
 license = "Apache-2.0"
 authors = ["The Teaclave Authors"]
+
+[workspace.dependencies]
+sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
