--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -9,10 +9,10 @@ license.workspace = true
 default = ["std"]
 std = ["lsm-sgx/std", "fjall-sgx-storage/std"]
 
-[dependencies]
+[target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
+sgx_tstd = { workspace = true }
 lsm-sgx = { path = "../lsm-sgx", default-features = false }
 fjall-sgx-storage = { path = "../storage", default-features = false }
-sgx_tstd = { workspace = true, optional = true }
 
-[dev-dependencies]
-fjall-sgx-storage = { path = "../storage", default-features = false, features = ["implementations"] }
+# [dev-dependencies]
+# fjall-sgx-storage = { path = "../storage", default-features = false, features = ["implementations"] }
