--- a/storage/Cargo.toml
+++ b/storage/Cargo.toml
@@ -10,6 +10,6 @@ default = ["std", "implementations"]
 std = ["lsm-sgx/std"]
 implementations = []  # Enable concrete storage implementations
 
-[dependencies]
+[target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
+sgx_tstd = { workspace = true }
 lsm-sgx = { path = "../lsm-sgx", default-features = false }
-sgx_tstd = { workspace = true, optional = true }
