feat: add logger for enclave and host

--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -24,5 +24,7 @@ edition = "2021"
 [dependencies]
 sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
 sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
+log = "0.4"
+env_logger = "0.9"
 
 [workspace]
