fix: implement OCALLs for writing to disk on host side

--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -26,5 +26,6 @@ sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
 sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
 log = "0.4"
 env_logger = "0.9"
+lazy_static = "1.4"
 
 [workspace]
